ind-api - transaction-service done, some fixes
